plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.homegravity'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	//querydsl
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	testImplementation 'org.springframework.kafka:spring-kafka-test'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// db
	runtimeOnly 'com.mysql:mysql-connector-j'

	// jpa + lombok
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	annotationProcessor 'org.projectlombok:lombok'
	compileOnly 'org.projectlombok:lombok'

	// test lombok
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

	// jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	// oauth2 client
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// 공간 데이터 타입
	implementation 'org.hibernate:hibernate-spatial:6.4.4.Final'

	// elasticsearch
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

	// webclient 사용을 위한 webflux
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// websocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.webjars:sockjs-client:1.5.1'
	implementation 'org.webjars:stomp-websocket:2.3.3-1'
	implementation 'com.google.code.gson:gson:2.8.9'

	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	//redisson
	// https://mvnrepository.com/artifact/org.redisson/redisson-spring-boot-starter
	implementation 'org.redisson:redisson-spring-boot-starter:3.23.2'

	//S3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

}

tasks.named('test') {
	useJUnitPlatform()
}

clean {
	delete file('src/main/generated')
}

test {
	exclude '**/com/homegravity/Odi/domain'
}